Changing CMakeLists.txt to use add_llvm_library instead.
add_llvm_loadable_module seems to not work for the latest release of LLVM
anymore (LLVM 8)

--- a/analyses/CMakeLists.txt
+++ b/analyses/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_llvm_loadable_module(LLVMWyvern MODULE Wyvern.cpp)
+add_llvm_library(LLVMWyvern MODULE Wyvern.cpp)
 
 if(APPLE)
 	set_target_properties(LLVMWyvern PROPERTIES
