--- a/passes/CMakeLists.txt
+++ b/passes/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(../pdg/include)
 add_library(Wyvern MODULE
 	FindLazyfiable.cpp
 	Instrumentation.cpp
+	ProgramSlice.cpp
 )
 
 target_compile_features(Wyvern PRIVATE cxx_range_for cxx_auto_type)
@@ -10,6 +11,7 @@ target_compile_features(Wyvern PRIVATE cxx_range_for cxx_auto_type)
 set_target_properties(Wyvern PROPERTIES
 	COMPILE_FLAGS "-fno-rtti"
 )
+
 
 if(APPLE)
 	set_target_properties(Wyvern PROPERTIES
