Remove dependency on Boost. Instead we make C++ stdlib symbols from the instrumentation library hidden with a link script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,14 @@ else()
 	set(ENV{LLVM_DIR} $ENV{LLVM_HOME}/lib/cmake/llvm)
 endif()
 
+set(CMAKE_CXX_STANDARD 17)
+
 find_package(LLVM REQUIRED CONFIG)
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
-if (${LLVM_VERSION_MAJOR} VERSION_GREATER_EQUAL 10)
-	set(CMAKE_CXX_STANDARD 17)
-endif ()
 
-find_package(Boost REQUIRED COMPONENTS system)
-include_directories(${Boost_INCLUDE_DIRS})
 add_library(wyinstr SHARED wyinstr.cpp)
-target_link_libraries(wyinstr ${Boost_LIBRARIES})
-target_link_options(wyinstr PUBLIC -static-libstdc++)
+target_link_options(wyinstr PUBLIC -static-libstdc++ -static-libgcc -Wl,--version-script=${CMAKE_SOURCE_DIR}/link_script)
 
 add_subdirectory(passes)
